added font awesome, styled the main page a bit

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,23 @@
-<h1>hello world</h1>
+<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
+
+<div class="header">
+  <div id="headerText">
+    <h1>Matthew Lombana</h1>
+    <h5>Full Stack Web Developer</h5>
+    <br><br>
+    <a class="introAnchor" href="https://github.com">
+    <i class="fa fa-github fa-3x" aria-hidden="true" ></i></a>
+    <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i>
+    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i><br><br>
+    <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true "></i>
+  </div>
+
+</div>
+
+<div class="body">
+  <div class="projectTitle">
+    <h2>Projects</h2>
+  </div>
+
+
+</div>
