--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,43 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  height: 3000px;
+  background-color: #f99034;
+}
+
+.header {
+  text-align: center;
+  width: 100%;
+  height: 800px;
+  background-color: #f99034;
+  color: white;
+}
+
+#headerText {
+  padding-top: 300px;
+}
+
+h1 {
+  font-size: 450%;
+  
+}
+
+h2 {
+  font-size: 300%;
+  padding-top: 60px;
+}
+h5 {
+  font-size: 200%;
+  margin-top: 70px;
+}
+.body{
+  text-align: center;
+  margin-top: 20px;
+  width: 100%;
+  height: 2000px;
+  background-color: #fff
+}
+
+@font-face {
+  font-family: 'Montserrat', sans-serif;
+  src:url('/assets/Montserrat');
+
+}
