--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,19 +5,32 @@
     <h1>Matthew Lombana</h1>
     <h5>Full Stack Web Developer</h5>
     <br><br>
-    <a class="introAnchor" href="https://github.com">
+
+    <a class="githubHeader" href="https://github.com">
     <i class="fa fa-github fa-3x" aria-hidden="true" ></i></a>
-    <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i>
-    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i><br><br>
+
+    <a class="emailHeader" href="mailto:mplombana@gmail.com">
+    <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
+
+    <a class="linkedinHeader" href="https://linkedin.com">
+    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+    <br><br>
     <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true "></i>
   </div>
 
 </div>
 
-<div class="body">
-  <div class="projectTitle">
-    <h2>Projects</h2>
-  </div>
-
-
+<div class="projectWrapper">
 </div>
+
+<footer>
+  <a class="githubFooter" href="https://facebook.com">
+  <i class="fa fa-github fa-3x" aria-hidden="true" ></i></a>
+
+  <a class="emailFooter" href="mailto:mplombana@gmail.com">
+  <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
+
+  <a class="linkedinFooter" href="https://linkedin.com">
+  <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+
+</footer>
