--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,35 @@
 <div class="projectWrapper">
 </div>
 
+<div class="contactForm">
+<div class="col-md-4 mx-auto">
+    <div class="form-area ">
+        <form role="form">
+        <br style="clear:both">
+                    <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
+    				<div class="form-group">
+						<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+					</div>
+                    <div class="form-group">
+                    <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                        <!-- <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span> -->
+                    </div>
+
+        <button type="button" id="submit" name="submit" class="btn btn-primary middle">Submit Form</button>
+        </form>
+    </div>
+</div>
+</div>
+
 <footer>
   <a class="githubFooter" href="https://facebook.com">
   <i class="fa fa-github fa-3x" aria-hidden="true" ></i></a>
