--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,3 @@
-<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
-
 <div class="header">
   <div id="headerText">
     <h1>Matthew Lombana</h1>
@@ -15,12 +13,18 @@
     <a class="linkedinHeader" href="https://linkedin.com">
     <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
     <br><br>
-    <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true "></i>
+
+    <%= link_to("#projects")  do %>
+      <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true" id="arrowButton" class="slideButton"></i>
+    <% end %>
+
   </div>
 
 </div>
 
 <div class="projectWrapper">
+  <h1 id="projects" >Projects</h1>
+
 </div>
 
 <div class="contactForm">
