--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= google_webfonts_init({
+      google: ['Montserrat', 'Roboto']
+      })%>
     <title>Matthew Lombana | Full Stack Web Developer</title>
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,7 +13,7 @@
   </head>
 
   <body>
-
+<!--
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f99034" style="color: #fff">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +35,7 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
 
 
     <%= yield %>
