--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,18 +4,18 @@
     <h5>Full Stack Web Developer</h5>
     <br><br>
 
-    <a class="githubHeader" href="https://github.com">
+    <a class="githubHeader" href="https://github.com/mplombana1">
     <i class="fa fa-github fa-3x" aria-hidden="true" ></i></a>
 
     <a class="emailHeader" href="mailto:mplombana@gmail.com">
     <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
 
-    <a class="linkedinHeader" href="https://linkedin.com">
+    <a class="linkedinHeader" href="https://www.linkedin.com/in/matthew-lombana-a4738013b/">
     <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
     <br><br>
 
     <%= link_to("#projects")  do %>
-      <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true" id="arrowButton" class="slideButton"></i>
+      <i class="fa fa-arrow-circle-down fa-4x" aria-hidden="true" id="arrowButton" class="slideButton"></i>
     <% end %>
 
   </div>
@@ -24,46 +24,90 @@
 
 <div class="projectWrapper">
   <h1 id="projects" >Projects</h1>
+    <div class="projectBox">
+      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+        <div class="textBox">
+          <div class="title">GitInIt</div>
+          <div class="type">Event Purchaser</div>
+          <div class="tech">Ruby on Rails, Javascript, HTML/CSS, Stripe, Google Locations</div>
+          <div class="description">Paleo scenester tofu vexillologist, blue bottle chillwave adaptogen unicorn
+            subway tile you probably haven't heard of them williamsburg yr.
+             Chartreuse pop-up fingerstache +1 celiac tattooed. Mlkshk farm-to-table kombucha
+            health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
+        </div>
 
-</div>
-
-<div class="contactForm">
-<div class="col-md-4 mx-auto">
-    <div class="form-area ">
-        <form role="form">
-        <br style="clear:both">
-                    <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
-    				<div class="form-group">
-						<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-					</div>
-                    <div class="form-group">
-                    <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
-                        <!-- <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span> -->
-                    </div>
-
-        <button type="button" id="submit" name="submit" class="btn btn-primary middle">Submit Form</button>
+        <form action="https://github.com/mplombana1/GitInIt_app">
+          <input type="submit" value="Github" class="button" />
         </form>
+
     </div>
+
+    <div class="projectBox">
+      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+        <div class="textBox">
+          <div class="title">GitInIt</div>
+          <div class="type">Event Purchaser</div>
+          <div class="tech">Ruby on Rails, Javascript, HTML/CSS, Stripe, Google Locations</div>
+          <div class="description">Paleo scenester tofu vexillologist, blue bottle chillwave adaptogen unicorn
+            subway tile you probably haven't heard of them williamsburg yr.
+             Chartreuse pop-up fingerstache +1 celiac tattooed. Mlkshk farm-to-table kombucha
+            health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
+        </div>
+
+        <form action="https://github.com/mplombana1/GitInIt_app">
+          <input type="submit" value="Github" class="button" />
+        </form>
+
+    </div>
+    <div class="projectBox">
+      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+        <div class="textBox">
+          <div class="title">GitInIt</div>
+          <div class="type">Event Purchaser</div>
+          <div class="tech">Ruby on Rails, Javascript, HTML/CSS, Stripe, Google Locations</div>
+          <div class="description">Paleo scenester tofu vexillologist, blue bottle chillwave adaptogen unicorn
+            subway tile you probably haven't heard of them williamsburg yr.
+             Chartreuse pop-up fingerstache +1 celiac tattooed. Mlkshk farm-to-table kombucha
+            health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
+        </div>
+
+        <form action="http://google.com">
+          <input type="submit" value="Github" class="button" />
+        </form>
+
+    </div>
+    <div class="projectBox">
+      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+        <div class="textBox">
+          <div class="title">GitInIt</div>
+          <div class="type">Event Purchaser</div>
+          <div class="tech">Ruby on Rails, Javascript, HTML/CSS, Stripe, Google Locations</div>
+          <div class="description">Paleo scenester tofu vexillologist, blue bottle chillwave adaptogen unicorn
+            subway tile you probably haven't heard of them williamsburg yr.
+             Chartreuse pop-up fingerstache +1 celiac tattooed. Mlkshk farm-to-table kombucha
+            health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
+        </div>
+
+        <form action="http://google.com">
+          <input type="submit" value="Github" class="button" />
+        </form>
+
+    </div>
+
+
+
+
 </div>
-</div>
+
 
 <footer>
-  <a class="githubFooter" href="https://facebook.com">
+  <a class="githubFooter" href="https://github.com/mplombana1">
   <i class="fa fa-github fa-3x" aria-hidden="true" ></i></a>
 
   <a class="emailFooter" href="mailto:mplombana@gmail.com">
   <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i></a>
 
-  <a class="linkedinFooter" href="https://linkedin.com">
+  <a class="linkedinFooter" href="https://www.linkedin.com/in/matthew-lombana-a4738013b">
   <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
 
 </footer>
