--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,7 +14,7 @@ body {
 .header {
   text-align: center;
   width: 100%;
-  height: 800px;
+  height: 820px;
   // background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
   // background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
   background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
@@ -102,8 +102,6 @@ a:hover {
 
 // THE PROJECT BOXES AND THE CONTENTS INSIDE
 .projectWrapper{
-  // text-align: center;
-  margin-top: 20px;
   width: 100%;
   height: 2000px;
   background-color: #ededed;
@@ -123,6 +121,30 @@ a:hover {
 }
 
 #img1{
+  width: 400px;
+  height: 200px;
+  margin-top: 30px;
+  margin-right: 20px;
+  
+}
+
+#img2{
+  width: 400px;
+  height: 200px;
+  margin-top: 30px;
+  margin-right: 20px;
+}
+
+#img3{
+  width: 400px;
+  height: 200px;
+  margin-top: 30px;
+  margin-right: 20px;
+}
+
+#img4{
+  width: 400px;
+  height: 200px;
   margin-top: 30px;
   margin-right: 20px;
 }
