--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,13 +19,14 @@
     <% end %>
 
   </div>
-
 </div>
+
+
 
 <div class="projectWrapper">
   <h1 id="projects" >Projects</h1>
     <div class="projectBox">
-      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+      <img src="/assets/gitinit.png" alt=""class="float-right" id="img1">
         <div class="textBox">
           <div class="title">GitInIt</div>
           <div class="type">Event Purchaser</div>
@@ -43,7 +44,7 @@
     </div>
 
     <div class="projectBox">
-      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+      <img src="/assets/drumkit.png" alt=""class="float-right" id="img2">
         <div class="textBox">
           <div class="title">GitInIt</div>
           <div class="type">Event Purchaser</div>
@@ -54,13 +55,13 @@
             health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
         </div>
 
-        <form action="https://github.com/mplombana1/GitInIt_app">
+        <form action="https://github.com/mplombana1/drumkit_javascript">
           <input type="submit" value="Github" class="button" />
         </form>
 
     </div>
     <div class="projectBox">
-      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+      <img src="/assets/javaclock.png" alt=""class="float-right" id="img3">
         <div class="textBox">
           <div class="title">GitInIt</div>
           <div class="type">Event Purchaser</div>
@@ -71,13 +72,13 @@
             health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
         </div>
 
-        <form action="http://google.com">
+        <form action="https://github.com/mplombana1/clock_javascript">
           <input type="submit" value="Github" class="button" />
         </form>
 
     </div>
     <div class="projectBox">
-      <img src="https://www.fillmurray.com/500/200" alt=""class="float-right" id="img1">
+      <img src="/assets/protfolio.png" alt=""class="float-right" id="img4">
         <div class="textBox">
           <div class="title">GitInIt</div>
           <div class="type">Event Purchaser</div>
@@ -88,7 +89,7 @@
             health goth vexillologist, hoodie fashion axe ethical readymade man bun kogi taiyaki vape. </div>
         </div>
 
-        <form action="http://google.com">
+        <form action="https://github.com/mplombana1/my_portfolio">
           <input type="submit" value="Github" class="button" />
         </form>
 
