--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,6 +7,7 @@ body {
   // background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 2000%);
   font-family: "Montserrat";
 
+
 }
 
 
@@ -23,6 +24,8 @@ body {
   color: white;
 
   font-family: "Montserrat";
+
+
 
 }
 
@@ -125,7 +128,8 @@ a:hover {
   height: 200px;
   margin-top: 30px;
   margin-right: 20px;
-  
+  margin-left: 70px;
+
 }
 
 #img2{
@@ -133,6 +137,7 @@ a:hover {
   height: 200px;
   margin-top: 30px;
   margin-right: 20px;
+  margin-left: 70px;
 }
 
 #img3{
@@ -140,6 +145,7 @@ a:hover {
   height: 200px;
   margin-top: 30px;
   margin-right: 20px;
+  margin-left: 70px;
 }
 
 #img4{
@@ -147,6 +153,7 @@ a:hover {
   height: 200px;
   margin-top: 30px;
   margin-right: 20px;
+  margin-left: 70px;
 }
 
 .button{
@@ -165,6 +172,7 @@ a:hover {
 .button:hover {
   background-color: #273135;
   color: white;
+
 }
 
 // TEXT INSIDE PROJECT BOXES
