remove google web font to test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= google_webfonts_init({
+    <%#= google_webfonts_init({
       google: ['Montserrat', 'Roboto']
       })%>
     <title>Matthew Lombana | Full Stack Web Developer</title>
