cleaning up website

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,10 +40,7 @@
              Venues are able to create a profile page, create events and have a checklist of users that have purchased tickets. </div>
         </div>
 
-        <form action="https://github.com/mplombana1/GitInIt_app">
-          <input type="submit" value="Github" class="button" />
-        </form>
-
+        <a href="https://github.com/mplombana1/GitInIt_app" class="button first-child">GitHub</a>
     </div>
 
     <div class="projectBox">
@@ -55,10 +52,9 @@
           <div class="description">This is a simple web drumkit that I created to help me brush up on my Javascript. </div>
         </div>
 
-        <form action="https://github.com/mplombana1/drumkit_javascript">
-          <input type="submit" value="Github" class="button" />
-        </form>
+        <a href="https://github.com/mplombana1/drumkit_javascript" class="button first-child">Github</a>
 
+        <a href="https://mplombana1.github.io/drumkit_javascript/" class="button">Website</a>
     </div>
     <div class="projectBox">
       <img src="/assets/javaclock.png" alt=""class="float-right" id="img3">
@@ -69,9 +65,10 @@
           <div class="description">This is a clock created to home in on my Javascript skills. It uses the time on your computer to make a working moveable clock using CSS to move the three hands. </div>
         </div>
 
-        <form action="https://github.com/mplombana1/clock_javascript">
-          <input type="submit" value="Github" class="button" />
-        </form>
+        <a href="https://github.com/mplombana1/clock_javascript" class="button first-child">GitHub</a>
+
+        <a href="https://mplombana1.github.io/clock_javascript/" class="button">Website</a>
+
 
     </div>
     <div class="projectBox">
@@ -83,9 +80,7 @@
           <div class="description">A portfolio website to demonstrate my skills using Ruby on Rails and present the type of projects I have worked on. </div>
         </div>
 
-        <form action="https://github.com/mplombana1/my_portfolio">
-          <input type="submit" value="Github" class="button" />
-        </form>
+        <a href="https://github.com/mplombana1/my_portfolio" class="button first-child">GitHub</a>
 
     </div>
 
