--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -157,9 +157,9 @@ a:hover {
 }
 
 .button{
+  display: inline-block;
   margin-top: 50px;
-  margin-left: 500px;
-  height: 50px;
+  margin-left: 30px;
   width: 100px;
   background-color: #ededed;
   font-weight: bold;
@@ -167,7 +167,15 @@ a:hover {
   border-width: 1px;
   border-style: solid;
   border-color: #bcbaba;
+  padding: 15px;
+  color: #273135;
+
 }
+.button.first-child {
+  margin-left: 200px;
+}
+
+
 
 .button:hover {
   background-color: #273135;
