--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,6 +29,7 @@
 
 <div class="projectWrapper">
   <h1 id="projects" id:"smooth" >Projects</h1>
+
     <div class="projectBox">
       <img src="/assets/gitinit.png" alt=""class="float-right" id="img1">
         <div class="textBox">
@@ -41,6 +42,43 @@
         </div>
 
         <a href="https://github.com/mplombana1/GitInIt_app" class="button first-child">GitHub</a>
+
+        <a href="http://www.gitinit.co/users/login" class="button">Website</a>
+
+
+    </div>
+
+    <div class="projectBox">
+      <img src="/assets/Cinematek.png" alt=""class="float-right" id="img1">
+        <div class="textBox">
+          <div class="title">Cinematek</div>
+          <div class="type">Movie Info Website</div>
+          <div class="tech">Ruby on Rails, Javascript, HTML/CSS, Stripe, OMDB API</div>
+          <div class="description">GitInIt is a mobile first web application that lets users signup,
+             find local venues using Google's Geolocation and purchase entry tickets using the swipe API.
+             Venues are able to create a profile page, create events and have a checklist of users that have purchased tickets. </div>
+        </div>
+
+        <a href="https://github.com/mplombana1/GitInIt_app" class="button first-child">GitHub</a>
+
+        <a href="http://www.gitinit.co/users/login" class="button">Website</a>
+
+
+    </div>
+
+    <div class="projectBox">
+      <img src="/assets/risingsun.png" alt=""class="float-right" id="img4">
+        <div class="textBox">
+          <div class="title">Rising Sun</div>
+          <div class="type">Shows the Suns location using weather API</div>
+          <div class="tech">HTML, CSS, Javascript and Weather.com API</div>
+          <div class="description">A portfolio website to demonstrate my skills using Ruby on Rails and present the type of projects I have worked on. </div>
+        </div>
+
+        <a href="https://github.com/mplombana1/my_portfolio" class="button first-child">GitHub</a>
+
+        <a href="https://mplombana1.github.io/Rising_Sun/" class="button">Website</a>
+
     </div>
 
     <div class="projectBox">
@@ -56,6 +94,7 @@
 
         <a href="https://mplombana1.github.io/drumkit_javascript/" class="button">Website</a>
     </div>
+
     <div class="projectBox">
       <img src="/assets/javaclock.png" alt=""class="float-right" id="img3">
         <div class="textBox">
@@ -71,18 +110,9 @@
 
 
     </div>
-    <div class="projectBox">
-      <img src="/assets/protfolio.png" alt=""class="float-right" id="img4">
-        <div class="textBox">
-          <div class="title">Portfolio</div>
-          <div class="type">Personal Website</div>
-          <div class="tech">Ruby on Rails, jQuery, HTML/CSS</div>
-          <div class="description">A portfolio website to demonstrate my skills using Ruby on Rails and present the type of projects I have worked on. </div>
-        </div>
 
-        <a href="https://github.com/mplombana1/my_portfolio" class="button first-child">GitHub</a>
 
-    </div>
+
 
 
 
