text decoration and added movie info

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -54,14 +54,13 @@
           <div class="title">Cinematek</div>
           <div class="type">Movie Info Website</div>
           <div class="tech">Ruby on Rails, Javascript, HTML/CSS, Stripe, OMDB API</div>
-          <div class="description">GitInIt is a mobile first web application that lets users signup,
-             find local venues using Google's Geolocation and purchase entry tickets using the swipe API.
-             Venues are able to create a profile page, create events and have a checklist of users that have purchased tickets. </div>
+          <div class="description">Cinematek is a Movie search website that gives info on every movie ever created. It uses the OMDB API to locate
+          the movies and was styled using bootstrap. </div>
         </div>
 
-        <a href="https://github.com/mplombana1/GitInIt_app" class="button first-child">GitHub</a>
+        <a href="https://github.com/mplombana1/moviefinal" class="button first-child">GitHub</a>
 
-        <a href="http://www.gitinit.co/users/login" class="button">Website</a>
+        <a href="https://mplombana1.github.io/moviefinal/" class="button">Website</a>
 
 
     </div>
